# balikrun

./: README.md  pyproject.toml
src/balikrun/: compile.py  ir.py  specification.py
tests/compile/: test_SequenceBlock.py
tests/ir/: test_Edge.py  test_GraphIR.py  test_Node.py  test_roundtrip.py
tests/specification/: test_CompositeBlock.py  test_ReferenceBlock.py  test_TaskReference.py  test_roundtrip.py  test_usage.py
