[project]
name = "balikrun"
version = "0.0.1"
description = "Structured SESE workflows with iterative runs, multi-worker leasing, and audit-grade event logs."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
